# mithridate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
eval/: __init__.py  harness.py
mithridate/: __init__.py  models.py
mithridate/agent/: __init__.py  extractor.py  planner.py
mithridate/agent/providers/: __init__.py  anthropic.py  base.py
mithridate/agent/tools/: __init__.py  dedupe_check.py  extract_iocs.py  map_attack.py  score_confidence.py
mithridate/api/: __init__.py  app.py
mithridate/cli/: main.py
mithridate/enrich/: __init__.py
mithridate/gate/: __init__.py  detector.py  normalizer.py  screener.py
mithridate/ingest/: __init__.py  base.py  cisa_kev.py
mithridate/store/: __init__.py  db.py  stix_export.py
scripts/: setup.ps1  setup.sh
tests/: test_gate.py  test_models.py  test_store.py
